--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native": "0.70.5",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.9",
     "styled-components": "^5.3.6"
   },
@@ -31,7 +32,8 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "prettier": "^2.8.1"
+    "prettier": "^2.8.1",
+    "react-native-svg-transformer": "^1.0.0"
   },
   "private": true
 }
